--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,15 @@ p {
 }
 /* -------------------------------- */
 
+/* =======Phone screen */
 .container {
-  width: 1158px;
+  max-width: 320px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 15px;
+  padding: 0 16px;
 }
 
+/* ================== Header ================= */
 .page-header {
   position: relative;
   border-bottom: 1px solid #e7e9fc;
@@ -60,7 +62,6 @@ p {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  margin-right: 76px;
 }
 
 .logo-dark {
@@ -82,68 +83,16 @@ p {
 }
 
 .menu {
-  display: flex;
-  gap: 40px;
-}
-
-.nav-list-link {
-  display: block;
-  position: relative;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-color {
-  color: #404bbf;
-}
-
-.nav-hover:hover,
-.nav-hover:focus {
-  color: #404bbf;
-}
-
-.nav-activ::after {
-  position: absolute;
-  content: '';
-  bottom: -1px;
-  left: 0;
-  display: block;
-  width: 48px;
-  height: 4px;
-  border-radius: 2px;
-  background: #404bbf;
+  display: none;
 }
 
 .header-addres {
-  display: flex;
-  align-items: center;
-  font-style: normal;
+  display: none;
 }
 
-.list-addres {
-  display: flex;
-  gap: 40px;
-}
+/* ================== /Header ================= */
 
-.addres-list {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-
-.addres-hover:hover,
-.addres-hover:focus {
-  color: #404bbf;
-}
+/* ================== Hero ================= */
 
 .hero {
   max-width: 1440px;
@@ -155,23 +104,27 @@ p {
     url(../images/hero-img.jpg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   margin-right: auto;
   margin-left: auto;
-  padding-top: 188px;
-  padding-bottom: 188px;
-  background-size: cover;
+  padding-top: 72px;
+  padding-bottom: 72px;
 }
 
 .hero-title {
-  max-width: 496px;
+  max-width: 200px;
   margin-right: auto;
   margin-left: auto;
-  margin-bottom: 48px;
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
+  text-transform: capitalize;
   text-align: center;
   color: #ffffff;
+
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 72px;
 }
 
 .hero-btn {
@@ -197,6 +150,10 @@ p {
   background-color: #404bbf;
 }
 
+/* ================== /Hero ================= */
+
+/* ============ Feature ===================== */
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -211,65 +168,53 @@ p {
   overflow: hidden;
 }
 
-.feature-flex {
-  display: flex;
-  gap: 24px;
-}
 .feature-icon-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 112px;
-  border-radius: 4px;
-  border: 1px solid #8e8f99;
-  margin-bottom: 8px;
-  background: #f4f4fd;
+  display: none;
 }
 
-.feature-list {
-  width: calc((100% - 3 * 24px) / 4);
+.feature-list:not(:last-child) {
+  margin-bottom: 72px;
 }
 
 .feature {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .feature-list-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
   letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-align: center;
   color: #2e2f42;
   margin-bottom: 8px;
 }
 
 .feature-list-title-text {
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #434455;
 }
 
+/* ============ /Feature ===================== */
+
+/* ============ Our-team ===================== */
+
 .our-team {
   background-color: #f4f4fd;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .our-team-flex {
   display: flex;
-  gap: 24px;
-}
-
-.card {
-  background-color: #ffffff;
-  width: calc((100% - 3 * 24px) / 4);
-  border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  flex-direction: column;
+  gap: 72px;
+  align-items: center;
 }
 
 .our-team-title {
@@ -279,7 +224,20 @@ p {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
+
   margin-bottom: 72px;
+}
+
+.card {
+  width: 264px;
+  background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  text-align: center;
+
+  /* width: calc((100% - 3 * 24px) / 4); */
 }
 
 .our-team-title-card {
@@ -338,6 +296,15 @@ p {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* ============ /Our-team ===================== */
+
+/* ============ Portfolio ===================== */
+
+.sec-portfolio {
+  padding: 96px 0;
+  /* padding: 120px 0; */
+}
+
 .portfolio {
   font-size: 36px;
   line-height: 1.11;
@@ -346,28 +313,36 @@ p {
   text-align: center;
   color: #2e2f42;
   margin-bottom: 72px;
+
+  /* font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 72px; */
 }
 
-.list-portfolio {
-  display: flex;
+.portfolio-list-item:not(:last-child) {
+  margin-bottom: 48px;
+
+  /* display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
-  row-gap: 48px;
+  row-gap: 48px; */
+}
+
+.portfolio-list-item {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  /* width: calc((100% - 2 * 24px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .portfolio-container-text {
   border: 1px solid #e7e9fc;
   padding: 32px 16px;
   border-top: none;
-}
-
-.portfolio-list-item {
-  width: calc((100% - 2 * 24px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.sec-portfolio {
-  padding: 120px 0;
 }
 
 .portfolio-title-card {
@@ -398,8 +373,10 @@ p {
 }
 
 .overlay-wrapper {
+  height: 280px;
   position: relative;
   overflow: hidden;
+  line-height: 0;
 }
 
 .overlay-text {
@@ -419,6 +396,9 @@ p {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+/* ============ /Portfolio ===================== */
+
+/* ============ Footer ===================== */
 
 .footer {
   background-color: #2e2f42;
@@ -485,6 +465,7 @@ p {
 .foter-social-link:focus {
   background-color: #31d0aa;
 }
+/* ============ /Footer ===================== */
 
 /* =========== Backdrop ============= */
 .backdrop {
@@ -807,3 +788,409 @@ p {
   margin-left: 16px;
 }
 /* =========== /Form Footer ============= */
+
+/* !============= MEDIA STYLES FOR MOBILE ======================*/
+
+@media only screen and (max-width: 767px) {
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999999999;
+    background-color: #ffffff;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .mobile-menu.is-open {
+    transform: translateX(0%);
+  }
+
+  .mobile-menu-container {
+    position: relative;
+  }
+
+  .mobile-open-btn {
+    border: none;
+    background-color: transparent;
+    padding: 16px 0;
+    line-height: 0;
+  }
+
+  .mobile-open-btn-icon {
+    fill: #2f2f37;
+  }
+
+  .menu-mobile-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding-top: 72px;
+  }
+
+  .nav-list-link-mobile-menu {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11; /* 111.111% */
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .nav-color {
+    color: #404bbf;
+  }
+
+  .mobile-menu-close-btn {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    top: 24px;
+    right: 24px;
+    border-radius: 50%;
+    background-color: transparent;
+    padding: 0;
+    line-height: 0;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #2e2f42;
+  }
+
+  .addres-mobile-menu {
+  }
+
+  .list-addres-mobile-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin-top: 168px;
+  }
+
+  .addres-list-mobile-menu {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #4d5ae5;
+  }
+
+  .addres-color {
+    color: #434455;
+  }
+
+  .social-list-mobile-menu {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 40px;
+    padding: 0;
+    margin-top: 48px;
+    margin-bottom: 40px;
+  }
+
+  .mobile-menu-close-btn:hover,
+  .mobile-menu-close-btn:focus {
+    background-color: #404bbf;
+    border: none;
+  }
+}
+/* !============= /MEDIA STYLES FOR MOBILE ======================*/
+
+/* !============= MEDIA STYLES FOR TABLET ======================*/
+
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+  /* ?----------- HEADER STYLES FOR TABLET -------------------*/
+
+  .mobile-menu {
+    display: none;
+  }
+
+  .mobile-open-btn {
+    display: none;
+  }
+
+  .menu {
+    display: flex;
+    gap: 40px;
+  }
+
+  .logo {
+    margin-right: 120px;
+  }
+
+  .nav-list-link {
+    display: block;
+    position: relative;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .nav-color {
+    color: #404bbf;
+  }
+
+  .nav-hover:hover,
+  .nav-hover:focus {
+    color: #404bbf;
+  }
+
+  .nav-activ::after {
+    position: absolute;
+    content: '';
+    bottom: -1px;
+    left: 0;
+    display: block;
+    width: 48px;
+    height: 4px;
+    border-radius: 2px;
+    background: #404bbf;
+  }
+
+  .header-addres {
+    display: flex;
+    align-items: center;
+    font-style: normal;
+  }
+
+  .addres-list {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #434455;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    /* line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding-top: 24px;
+    padding-bottom: 24px; */
+  }
+
+  .addres-hover:hover,
+  .addres-hover:focus {
+    color: #404bbf;
+  }
+
+  .header-addres {
+    display: flex;
+    align-items: center;
+    font-style: normal;
+  }
+
+  /* ?----------- /HEADER STYLES FOR TABLET -------------------*/
+
+  /* ?----------- Hero STYLES FOR TABLET -------------------*/
+  .hero {
+    padding-top: 112px;
+    padding-bottom: 112px;
+  }
+
+  .hero-title {
+    max-width: 496px;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+
+    margin-bottom: 36px;
+  }
+  /* ?----------- /Hero STYLES FOR TABLET -------------------*/
+
+  /* ?----------- Feature STYLES FOR TABLET -------------------*/
+  .feature-flex {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 72px;
+  }
+
+  .feature-list {
+    width: calc((100% - 24px) / 2);
+  }
+
+  .feature-list.feature-list-item {
+    margin-bottom: 0;
+  }
+
+  .feature-list-title {
+    text-align: left;
+  }
+  /* ?----------- /Feature STYLES FOR TABLET -------------------*/
+
+  /* ?----------- Our Team STYLES FOR TABLET -------------------*/
+
+  .our-team {
+    padding: 96px 0;
+  }
+
+  .our-team-flex {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    row-gap: 64px;
+    column-gap: 24px;
+    /* row-gap: 64; */
+  }
+  /* ?----------- /Our Team STYLES FOR TABLET -------------------*/
+
+  /* ?----------- Portfolio STYLES FOR TABLET -------------------*/
+
+  .list-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 72px;
+  }
+
+  .list-portfolio .portfolio-list-item {
+    width: calc((100% - 24px) / 2);
+    margin-bottom: 0;
+  }
+  /* ?----------- /Portfolio  STYLES FOR TABLET -------------------*/
+
+  /* ?----------- Footer STYLES FOR TABLET -------------------*/
+  /* ?----------- /Footer STYLES FOR TABLET -------------------*/
+}
+
+/* !============= /MEDIA STYLES FOR TABLET ======================*/
+
+/* !============= MEDIA STYLES FOR DESCKTOP =====================*/
+
+@media only screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  }
+  /* ?----------- HEADER STYLES FOR DESCKTOP -------------------*/
+  .menu {
+    display: flex;
+    gap: 40px;
+  }
+
+  .list-addres {
+    display: flex;
+    gap: 40px;
+  }
+
+  .header-addres {
+    display: flex;
+    align-items: center;
+    font-style: normal;
+  }
+
+  .addres-list {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+  /* ?----------- /HEADER STYLES FOR DESCKTOP -------------------*/
+
+  /* ?----------- Hero STYLES FOR DESCKTOP -------------------*/
+  .hero {
+    padding-top: 188px;
+    padding-bottom: 188px;
+  }
+
+  .hero-title {
+    margin-bottom: 48px;
+  }
+
+  /* ?----------- /Hero STYLES FOR DESCKTOP -------------------*/
+
+  /* ?----------- Feature STYLES FOR DESCKTOP -------------------*/
+  .feature-icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 112px;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+    background: #f4f4fd;
+  }
+
+  .feature-list-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+  }
+
+  .feature-list-title-text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #434455;
+  }
+
+  .feature-list {
+    width: calc((100% - 3 * 24px) / 4);
+  }
+
+  .feature {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  /* ?----------- /Feature STYLES FOR DESCKTOP -------------------*/
+
+  /* ?----------- Our Team STYLES FOR DESCKTOP -------------------*/
+  .our-team {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .our-team-flex {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+  }
+
+  .card {
+    text-align: center;
+    width: calc((100% - 3 * 24px) / 4);
+  }
+  /* ?----------- /Our Team STYLES FOR DESCKTOP -------------------*/
+
+  /* ?----------- Portfolio STYLES FOR DESCKTOP -------------------*/
+  .sec-portfolio {
+    padding: 120px 0;
+  }
+
+  .list-portfolio {
+    column-gap: 24px;
+    row-gap: 48px;
+  }
+
+  .list-portfolio .portfolio-list-item {
+    width: calc((100% - 2 * 24px) / 3);
+    margin-bottom: 0;
+  }
+  /* ?----------- /Portfolio  STYLES FOR DESCKTOP -------------------*/
+
+  /* ?----------- Footer STYLES FOR DESCKTOP -------------------*/
+  /* ?----------- /Footer STYLES FOR DESCKTOP -------------------*/
+}
+
+/* !============= /MEDIA STYLES FOR DESCKTOP ======================*/
